# orbital

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/agents/: analyst.md  brand-marketing.md  commercial-strategy.md  customer-voice.md  data-science.md  data.md  design.md  engineering.md  financial.md  legal.md  product.md  quality-judge.md  tech-lead.md  ux-writing.md
docs/: ORBITAL.md  design-system.md  mcp-setup.md  quality-gates-concept.md  quality-gates.md  system-design.md
schemas/: context.schema.json  contribution.schema.json  dot-vote.schema.json  evidence.schema.json  opportunity.schema.json  quality-evaluation.schema.json  review.schema.json  synthesis.schema.json
server/: app.py  config.py
server/routers/: catalog.py  context.py  evidence.py  launch.py  quality.py  workspaces.py
server/services/: cli_bridge.py  context_index.py  context_reader.py  judge_agent.py  launcher.py  llm_judge.py  quality_gates.py  strategy_doc.py  validator.py  watcher.py  workspace.py
server/static/: design-system.css  index.html
server/ws/: handler.py
skills/agree/: SKILL.md
skills/assemble/: SKILL.md
skills/execute/: SKILL.md
skills/explore/: SKILL.md
skills/orbit/: SKILL.md
skills/prototype/: SKILL.md
tests/: conftest.py  test_no_duplicate_dirs.py  validate.py
tests/e2e/: conftest.py  findings.md  test.md  test_agent_flow.py  test_dashboard.py  test_decision_brief.py  test_dot_vote_flow.py  test_evidence_ui.py  test_quality_ui.py  test_settings.py  test_ui_components.py
tests/schemas/: test-all.sh  (+7 more)
(+105 files in other folders)
