[project]
name = "orbital"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "jsonschema>=4.23.0",
    "watchfiles>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
include = ["server*"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
